--- a/style.css
+++ b/style.css
@@ -1,4 +1,50 @@
+*{
+    margin:0;
+    padding: 0; 
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
+}
+.title{
+    color: rgb(7, 7, 7); 
+    text-decoration:none; 
+    font-size: 22px; 
 
+}
+.container{
+    padding: 10px 10%; 
+}
 
+nav{
+    display: flex; 
+    flex-wrap: wrap; 
+    justify-content: space-between;
+    align-items: center;
+}
+nav ul li{
+    display: inline-block; 
+    list-style:none; 
+    margin: 10px 20px; 
+}
 
+nav ul li a{
+    color: rgb(7, 7, 7); 
+    text-decoration:none; 
+    font-size: 18px; 
+    position: relative; 
+
+}
+
+nav ul li a::after{
+    content: ''; 
+    width: 0; 
+    height: 3px; 
+    background: #ff004f; 
+    position: absolute; 
+    left: 0; 
+    bottom: -6px; 
+    transition: 0.5s; 
+}
+nav ul li a:hover::after{
+    width: 100%; 
+}
 
