--- a/style.css
+++ b/style.css
@@ -38,6 +38,31 @@ html::-webkit-scrollbar-thumb{
 body{
     background: #111; 
     overflow-x: hidden; 
+    padding-left: 35rem;
+}
+
+section{
+    min-height: 100vh; 
+    padding: 1rem; 
+}
+
+.btn{
+    padding: .7rem 3rem; 
+    background: #333; 
+    color: #fff; 
+    cursor: pointer; 
+    margin-top: 1rem; 
+    font-size: 2rem; 
+    border-radius: 5rem; 
+}
+
+.btn i{
+    padding: 0 .5rem; 
+    font-size: 1.8rem
+}
+
+.btn:hover{
+    background: var(--yellow); 
 }
 
 header{
@@ -95,4 +120,93 @@ header .navbar ul li a{
 
 header .navbar ul li a:hover{
     background: var(--yellow); 
+}
+
+#menu{
+    position: fixed; 
+    top:2rem; 
+    right:2rem; 
+    background: #333; 
+    color: #fff; 
+    cursor: pointer; 
+    font-size: 2.5rem; 
+    padding: 1rem 1.5rem; 
+    z-index: 1000; 
+    display: none; 
+}
+
+.home{
+    display: flex; 
+    justify-content: center;   
+    flex-flow: column; 
+    padding: 0 15rem; 
+}
+.home h3{
+    font-size: 2.5rem; 
+    color: #fff; 
+}
+
+.home h1{
+    font-size: 5rem; 
+    color: #fff; 
+}
+
+.home h1 span{
+    color: var(--yellow); 
+}
+.home p{
+    font-size: 2rem; 
+    color: #eee; 
+    padding: 1rem 0; 
+}
+
+
+
+
+
+
+
+
+
+@media(max-width: 1200px){
+    html{ 
+        font-size: 55%; 
+        overflow-x: hidden;
+    }
+    .home{
+        padding: 1rem 4rem; 
+    }
+
+
+}
+
+@media(max-width: 991px){
+    header{ 
+        left: -120px; 
+    }
+    #menu{
+        display: block; 
+    }
+    header.toggle{
+        left: 0%; 
+    }
+    body{
+        padding:0; 
+    }
+
+
+}
+
+@media(max-width: 768px){
+    html{ 
+        font-size: 50%; 
+    }
+
+}
+
+@media(max-width: 400px){
+    header{ 
+        width: 100vw; 
+    }
+
 }
