--- a/style.css
+++ b/style.css
@@ -65,6 +65,18 @@ section{
     background: var(--yellow); 
 }
 
+.heading{
+    text-align: center; 
+    margin: .6rem; 
+    font-size: 4rem; 
+    padding: 1rem; 
+    border-bottom: .1rem solid #fff4; 
+    color: #fff; 
+}
+.heading span{
+    color:var(--yellow); 
+}
+
 header{
     position: fixed; 
     top: 0; 
@@ -160,6 +172,56 @@ header .navbar ul li a:hover{
     padding: 1rem 0; 
 }
 
+.about .row{
+    display:flex; 
+    align-items: center; 
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 1rem 0; 
+}
+
+.about .row .info{
+    flex: 1 1 48rem; 
+    padding: 2rem 1rem; 
+    padding-left: 6rem; 
+}
+
+.about .row .info h3{
+    font-size: 2rem; 
+    color: var(--yellow); 
+    padding: 1rem 0; 
+    font-weight: normal;
+}
+
+.about .row .info h3 span{
+    color: #eee; 
+    padding: 0rem 0.5; 
+   
+}
+
+.about .row .counter{
+    flex: 1 1 48rem; 
+    padding: 2rem 1rem; 
+    justify-content: center;
+    flex-wrap: wrap;
+
+}
+
+.about .row .counter .box{
+    width: 20rem; 
+    background: #222; 
+    text-align: center; 
+    padding: 2rem; 
+    margin: 2rem; 
+}
+.about .row .counter .box span{
+    font-size: 4rem; 
+    color: var(--yellow); 
+}
+.about .row .counter .box h3{
+    font-size: 2rem; 
+    color: #fff; 
+}
 
 
 
@@ -208,5 +270,13 @@ header .navbar ul li a:hover{
     header{ 
         width: 100vw; 
     }
+    .heading{
+        margin: 0 3rem; 
+    }
+    .about .row .counter .box{
+        width: 100%; 
+        
+    }
+
 
 }
