--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600&display=swap');
 
 :root{
-    --yellow: #f9ca24; 
+    --yellow: #f8a60e; 
 }
 
 *{
@@ -11,13 +11,12 @@
     text-decoration: none;
     outline:none; 
     border: none; 
-    text-transform: capitalize;
+    text-transform: none;
     transition: all .2s linear; 
 }
 
 *::selection{
-    background: var(--yellow); 
-    color: #333; 
+    background: var(--yellow);     color: #333; 
 }
 
 html{ 
